Finalize accessibility fix for mobile browsers and fix spacing on join us page

--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@ div img {
   margin-left: 50%;
   transform: translateX(-50%);
   opacity: .7;
-  padding: 100px;
+  margin-top: 100px;
 }
 
 div h2 {
@@ -30,14 +30,14 @@ div h2 {
   color: #000;
   font-family: cubano, sans-serif;
   font-style: normal;
-  top: 38%;
+  top: 55%;
   left: 50%;
   text-align: center;
   transform: translate(-50%, -50%);
 }
 
 .home-main {
-  margin-bottom: 300px;
+  margin-bottom: 350px;
 }
 
 .home-main h3 {
@@ -296,7 +296,7 @@ footer p {
 }
 
 .join-us-main {
-  margin-bottom: 1000px;
+  margin-bottom: 700px;
 }
 
 .join-us-main h3 {
@@ -343,6 +343,22 @@ footer p {
   max-height: 100vw;
   transform: rotate(-90deg);
   margin-top: -100px;
+}
+
+@media screen and (min-width: 33em) {
+
+  .join-us-main {
+    margin-bottom: 900px;
+  }
+
+}
+
+@media screen and (min-width: 38em) {
+
+  .join-us-main {
+    margin-bottom: 1100px;
+  }
+
 }
 
 @media screen and (min-width: 48em) {
